Improve routing with Apache using RewriteEngine.
* Add custom error pages.
* Add homepage for 'docs' subdomain.

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,1 +1,5 @@
-DirectoryIndex /personal_site/index.html
+RewriteEngine On
+
+RewriteRule ^$ personal_site/index.html [NC]
+
+# Redirect 301 /index.html /personal_site/index.html
